--- a/main.html
+++ b/main.html
@@ -203,7 +203,7 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Darwin Oliver Shahi</div>
+                                <div class="sub-title">Darwin Oliver </div>
                             </div>
                         </div>
                         <div class="row">
